--- a/10-personal-blog/complete/public/index.html
+++ b/10-personal-blog/complete/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css"
+      referrerpolicy="no-referrer"
+    />
     <title>Personal Blog</title>
   </head>
   <body>
